crates/ts/tests/snapshots/baseline_diff__baseline_made_async.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: Changed(ReturnType)
  is_breaking: true
  description: "`f` was made async (return type wrapped in async wrapper)"
  before: string
  after: Promise<string>
  has_migration_target: false
